--- a/src/Contacts/Contacts/Contacts.csproj
+++ b/src/Contacts/Contacts/Contacts.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CalcBinding" Version="2.5.2" />
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
       <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
