--- a/src/Contacts/Contacts/Contacts.csproj
+++ b/src/Contacts/Contacts/Contacts.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="CalcBinding" Version="2.5.2" />
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+      <PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.0" />
       <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
