--- a/src/Contacts/ViewModel/ViewModel.csproj
+++ b/src/Contacts/ViewModel/ViewModel.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ViewModel\" />
+    </ItemGroup>
+
 </Project>
